# rust_model_generator

./: .gitignore  Cargo.toml  README.md
configs/: gen_settings.toml
src/: main.rs  mod.rs
src/swagger_generator/: generator.rs  mod.rs
src/swagger_generator/enum_generator/: mod.rs
src/swagger_generator/model_generator/: mod.rs  model_generator.rs
src/swagger_generator/utils/: mod.rs  printers.rs  read_toml.rs  utils.rs
