[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
toml = "0.5.2"
walkdir = "2"
